# static-site-generator

./: pyproject.toml  server.py
src/: htmlnode.py  main.py  test_htmlnode.py  test_textnode.py  test_utils.py  textnode.py  utils.py
