[tool.poetry]
name = "static-site-generator"
version = "0.1.0"
description = ""
authors = ["Martin Larsson <demdeems@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
